bpo-18372: Add missing PyObject_GC_Track() calls in the pickle module